--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <table id="nav">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
     <tr>
-  <td>About Me</td>
-  <td>Education</td>
-  <td>Resume</td>
-  <td>Community Service</td>
-  <td>Contact Me</td>
+  <td><a href="AboutMe.html"/>About Me</td>
+  <td><a href="Education.html"/>Education</td>
+  <td><a href="Resume.html"/>Resume</td>
+  <td><a href="CommunityService.html"/>Community Service</td>
+  <td><a href="ContactMe.html"/>Contact Me</td>
 </tr>
 </table>
 
