--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <table id="nav">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
     <tr>
-      <td><a style="text-decoration:none" href="AboutMe.html"/><img src=""/></td>
-  <td><a style="text-decoration:none"href="Education.html"/>Education</td>
+      <td><a style="text-decoration:none" href="AboutMe.html"/><img src="pictures/gradpic2.png"/></td>
+  <td><a style="text-decoration:none"href="Education.html"/><img src="pictures/edu.3.png"/></td>
   <td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
   <td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
   <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
