--- a/AboutMe.html
+++ b/AboutMe.html
@@ -5,7 +5,7 @@
   <link type="text/css"rel="stylesheet"href="CSS/style2.css"/>
   <title>About me</title>
 </head>
-<body background="http://www.davelangley.org/uploads/images/about_me_title01.jpg" id="me" alt=""/>
+<body background="http://jcreationsaz.files.wordpress.com/2013/04/ashely-senior-soccer-37.jpg" id="me" alt=""/>
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet" type="text/css">
   <h1>About Me</h1>
 
