--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <tr>
       <td><a style="text-decoration:none" href="AboutMe.html"/><img src="pictures/gradpic2.png"/></td>
   <td><a style="text-decoration:none"href="Education.html"/><img src="pictures/edu.3.png"/></td>
-  <td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
-  <td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
+  <td><a style="text-decoration:none"href="Resume.html"/><img src="pictures/resume3.png"/></td>
+  <td><a style="text-decoration:none"href="CommunityService.html"/><img src="pictures/serve3.png"/></td>
   <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
 </tr>
 </table>
