--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <table id="nav">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
     <tr>
-      <td><a style="text-decoration:none" href="AboutMe.html"/><img src="pictures/gradpic2.png"/></td>
+  <div><a style="text-decoration:none" href="AboutMe.html"/><img src="pictures/gradpic2.png"/></div>
   <td><a style="text-decoration:none"href="Education.html"/><img src="pictures/edu.3.png"/></td>
   <td><a style="text-decoration:none"href="Resume.html"/><img src="pictures/resume3.png"/></td>
   <td><a style="text-decoration:none"href="CommunityService.html"/><img src="pictures/serve3.png"/></td>
-  <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
-</tr>
+   <td><a style="text-decoration:none"href="ContactMe.html"/><img src="pictures/contact3.png"/></td>
+   </tr>
 </table>
 
 
