--- a/Education.html
+++ b/Education.html
@@ -6,3 +6,14 @@
     <link href='https://fonts.googleapis.com/css?family=Londrina+Outline' rel='stylesheet' type='text/css'>
 <title>Education</title>
 </head>
+<body>
+  <img alt="full screen background image" src="http://i.huffpost.com/gen/1706510/images/o-OPEN-BOOK-facebook.jpg" id="full-screen-background-image" />
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+<h1>Education</h1>
+
+
+
+
+
+
+</body>
