--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
   <table id="nav">
     <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
     <tr>
-  <div><a style="text-decoration:none" href="AboutMe.html"/><img src="pictures/gradpic2.png"/></div>
-  <td><a style="text-decoration:none"href="Education.html"/><img src="pictures/edu.3.png"/></td>
-  <td><a style="text-decoration:none"href="Resume.html"/><img src="pictures/resume3.png"/></td>
-  <td><a style="text-decoration:none"href="CommunityService.html"/><img src="pictures/serve3.png"/></td>
+  <td><a style="text-decoration:none" href="AboutMe.html"/><img src="pictures/gradpic2.png"/></td>
+  <td></td>
+  <td><a style="text-decoration:none"href="Resume.html"/><img src="pictures/resume6.png"/></td>
+  <td></td>
    <td><a style="text-decoration:none"href="ContactMe.html"/><img src="pictures/contact3.png"/></td>
    </tr>
+   <tr>
+     <td></td>
+     <td><a style="text-decoration:none"href="Education.html"/><img src="pictures/edu.3.png"/></td>
+     <td></td>
+     <td><a style="text-decoration:none"href="CommunityService.html"/><img src="pictures/serve3.png"/></td>
+      <td></td>
+    </tr>
 </table>
 
 
