--- a/AboutMe.html
+++ b/AboutMe.html
@@ -9,6 +9,17 @@
   <img alt="full screen background image" src="http://jcreationsaz.files.wordpress.com/2013/04/ashely-senior-soccer-37.jpg" id="full-screen-background-image" />
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet" type="text/css">
   <h1>About Me</h1>
+  <table id="nav">
+    <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
+    <tr>
+  <td><a style="text-decoration:none" href="AboutMe.html"/>About Me</td>
+  <td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
+   <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
+    <td><a style="text-decoration:none"href="Education.html"/>Education</td>
+   <td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
+    </tr>
+  </table>
+
 
 </body>
 
