--- a/CommunityService.html
+++ b/CommunityService.html
@@ -7,8 +7,17 @@
 </head>
 <body>
   <img alt="full screen background image" src="http://youthmc.org/communities/8/000/000/205/208//images/295022.jpg" id="full-screen-background-image" />
-
 <h1>Community Service</h1>
+<table id="nav">
+  <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
+  <tr>
+<td><a style="text-decoration:none" href="AboutMe.html"/>About Me</td>
+<td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
+ <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
+  <td><a style="text-decoration:none"href="Education.html"/>Education</td>
+ <td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
+  </tr>
+</table>
 
 
 
