--- a/Resume.html
+++ b/Resume.html
@@ -10,6 +10,16 @@
   <img alt="full screen background image" src="http://desktopbackgroundshq.com/backgrounds/cool-nature-cool-backgrounds-cool-nature-25477.jpg" id="full-screen-background-image" />
 <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
 <h1>Resume</h1>
+<table id="nav">
+  <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
+  <tr>
+<td><a style="text-decoration:none" href="AboutMe.html"/>About Me</td>
+<td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
+ <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
+  <td><a style="text-decoration:none"href="Education.html"/>Education</td>
+ <td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
+  </tr>
+</table>
 
 
 
