--- a/Education.html
+++ b/Education.html
@@ -13,12 +13,13 @@
 <table id="nav">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <tr>
+<td><a style="text-decoration:none" href="http://star5eam.github.io/"/>Home</td>
 <td><a style="text-decoration:none" href="AboutMe.html"/>About Me</td>
+<td><a style="text-decoration:none"href="Education.html"/>Education</td>
 <td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
+<td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
  <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
-  <td><a style="text-decoration:none"href="Education.html"/>Education</td>
- <td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
-  </tr>
+</tr>
 </table>
 
 
