--- a/Resume.html
+++ b/Resume.html
@@ -13,6 +13,7 @@
 <table id="nav">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <tr>
+<td><a style="text-decoration:none" href="http://star5eam.github.io/"/>Home</td>
 <td><a style="text-decoration:none" href="AboutMe.html"/>About Me</td>
 <td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
  <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
