--- a/ContactMe.html
+++ b/ContactMe.html
@@ -18,9 +18,14 @@
 <td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
 <td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
  <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
-
   </tr>
 </table>
+<p> E-mails: star5adri@aol.com
+  star5eamiloveblue55@gmail.com
+</p>
+<p>Phone Numbers: Main-(845)-597-9283
+  Back Up-(845)-401-9682
+</p>
 
 
 
