--- a/ContactMe.html
+++ b/ContactMe.html
@@ -20,17 +20,28 @@
  <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
   </tr>
 </table>
-<p id="paraone"> E-mails: star5adri@aol.com
-  star5eamiloveblue55@gmail.com
-</p>
-<p>Phone Numbers: Main-(845)-597-9283
-  Back Up-(845)-401-9682
-</p>
-
-
-
-
-
+<table style="width:100%" id="paraone">
+  <tr>
+  <td><span>E-mail</span></td>
+  </tr>
+  <tr>
+  <td>star5adri@aol.com</td>
+  </tr>
+  <tr>
+<td>star5eamiloveblue55@gmail.com</td>
+</tr>
+</table>
+<table style="width:100%" id="paratwo">
+  <tr>
+  <td><span>Phone Number</span></td>
+</tr>
+<tr>
+  <td> Main-(845)-597-9283</td>
+</tr>
+<tr>
+<td>  Back Up-(845)-401-9682</td>
+</tr>
+</table>
 
 </body>
 </html>
