--- a/Resume.html
+++ b/Resume.html
@@ -21,6 +21,10 @@
  <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
   </tr>
 </table>
+Work History
+References
+Extra-curiculars
+Intrests
 
 
 
