--- a/Education.html
+++ b/Education.html
@@ -21,10 +21,9 @@
  <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
 </tr>
 </table>
-
-
-
-
-
+<p><strong>I've received an Advanced Regents Diploma from <a href="http://nfa.newburghschools.org/">Newburgh Free Academy-North Campus</a> with a GPA of 3.7.</strong></p>
+<p>Honors and AP classes
+  Athlethic scholar
+  Security Certification.
 </body>
 </html>
