--- a/Education.html
+++ b/Education.html
@@ -22,8 +22,6 @@
 </tr>
 </table>
 <p><strong>I've received an Advanced Regents Diploma from <a href="http://nfa.newburghschools.org/">Newburgh Free Academy-North Campus</a> with a GPA of 3.7.</strong></p>
-<p>Honors and AP classes
-  Athlethic scholar
-  Security Certification.
+<p>I've taken honor and AP classes, I'm an Athlethic scholar, and have also recieved a Security Certificate form the criminal justice classes I attended in high school.</p>
 </body>
 </html>
