--- a/CommunityService.html
+++ b/CommunityService.html
@@ -21,7 +21,7 @@
 </tr>
 </table>
 <p><strong> During high school I was apart of two different scholar soceities called National Science Honor Society and National Honor Society, both were very invloved in community service.
-We took place in things like cleaning up our community's park, tutoring other kids, volunteering at our community's boys and girls club, having food drives and coat collection for people who need them.</strong></p>
+We participated in things like cleaning up our community's park, tutoring other kids, volunteering at our community's boys and girls club, having food drives and coat collection for people who need them.</strong></p>
 <p><strong> I was also involved in a club called Key Club which was solely based on doing community service. Somethings that were accomplished with this club was having a movie night for speical needs kids,having an autism walk at our school, attending the breast cancer walk, and helping with highway clean ups.</strong></p>
 
 
