--- a/Resume.html
+++ b/Resume.html
@@ -22,44 +22,10 @@
   </tr>
 </table>
 <table id="two">
-<ul>
-<tr>
-  <td><h2>Work History:</h2></td>
-  <tr><li> Seasonal Sale Associate at Banana Repblic in the Woodbury Commons</li></tr>
-  <tr><li>Currently a Wendy's employee</li></tr>
-  <td></td>
-  <td></td>
-  <td></td>
-  <td><h2>Intrests:</h2></td>
-  <tr><li>pie</li></tr>
-  <tr><li>high</li></tr>
-  <tr><li>fly</li></tr>
-  <tr><li>loww</li></tr>
-  </ul>
-</tr>
-
-  <td><h2>References:</h2></td>
-  <tr><li></li></tr>
-  <tr><li></li></tr>
-</ul>
-<ul>
-
-<ul>
-<td><h2>Extra-curiculars:</h2></td>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-</ul>
-</tr>
-</ul>
-</td>
-
-
-
-
-
-
-
+  <h2>Work History:</h2>
+  <li> Seasonal Sale Associate at Banana Repblic in the Woodbury Commons</li>
+  <li>Currently a Wendy's employee</li>
+  <h2>Intrests:</h2>
+  <h2>References:</h2>
+  <h2>Extra-curiculars:</h2>
 </body>
