--- a/ContactMe.html
+++ b/ContactMe.html
@@ -15,7 +15,7 @@
 <td><a style="text-decoration:none" href="http://star5eam.github.io/"/>Home</td>
 <td><a style="text-decoration:none" href="AboutMe.html"/>About Me</td>
 <td><a style="text-decoration:none"href="Education.html"/>Education</td>
-<td><a style="text-decoration:none"href="Resume.html"/>Resume</td>
+<td><a style="text-decoration:none"href="pictures\Resume.docx" download/>Resume</td>
 <td><a style="text-decoration:none"href="CommunityService.html"/>Community Service</td>
  <td><a style="text-decoration:none"href="ContactMe.html"/>Contact Me</td>
   </tr>
