--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <tr>
   <td><a style="text-decoration:none" href="AboutMe.html"/><img src="pictures/gradpic2.png"/></td>
   <td></td>
-  <td><a style="text-decoration:none"href="Resume.html"/><img src="pictures/resume6.png"/></td>
+  <td><a style="text-decoration:none"href="pictures\Resume.docx" download/><img src="pictures/resume6.png"/></td>
   <td></td>
    <td><a style="text-decoration:none"href="ContactMe.html"/><img src="pictures/contact3.png"/></td>
    </tr>
