--- a/AboutMe.html
+++ b/AboutMe.html
@@ -23,7 +23,7 @@
   <p><strong> My name is Adriana El Monkaddem and I created this website. I'm 18 years old and I've lived in Newburgh my whole life. For the majority of my life I've played soccer, whether it was on a school team, travel or just a side team on the weekends.</strong></p>
   <p><strong>I'm half Italian, a quater Brazilian, and a quarter Lebanese. I attended Newburgh Free Academy North Campus for the criminal justice program and recieved my NYS security certificate.</strong></p>
   <p><strong> My favorite color is blue, I'm an only child, and I want to attend college for Computer Science. Want to know more? Check out the Contact Me page if you want to know more. </strong></p>
-
+<img src="pictures\me1.jpg"/>
 
 </body>
 
